--- a/Index.html
+++ b/Index.html
@@ -93,11 +93,11 @@
     </tr>
     <tr>
       <td>Manicure simples</td>
-      <td>R$ 20,00</td>
+      <td>R$ 30,00</td>
     </tr>
     <tr>
-      <td>Manicure + Nail Art</td>
-      <td>R$ 30,00</td>
+      <td>Esmaltação em gel/td>
+      <td>R$ 70,00</td>
     </tr>
     <tr>
       <td>Pedicure</td>
@@ -105,7 +105,7 @@
     </tr>
     <tr>
       <td>Pé e mão</td>
-      <td>R$ 45,00</td>
+      <td>R$ 65,00</td>
     </tr>
   </table>
 
@@ -128,5 +128,31 @@
     }
   </script>
 
-</body>
+</body><!-- Seção do Plano Mensal -->
+<div id="plano" class="info" style="margin-top: 40px;">
+  <h2 style="color:#cc007a;">💎 Pacote Mensal de Unhas</h2>
+
+  <h3>📌 Regras</h3>
+  <p style="max-width: 600px; margin: auto; text-align: left;">
+    • O valor do pacote deve ser pago no ato da aquisição.<br>
+    • Em caso de não comparecimento constará como serviço feito. Se possível, avisar com no mínimo 1h de antecedência.<br>
+    • Atraso de até 10 minutos. Após isso, o horário será perdido.<br>
+    • O pacote é intransferível – não pode ser usado por outra pessoa.<br>
+    • Deve ser consumido em até 30 dias. Após esse prazo, será encerrado.
+  </p>
+
+  <h3 style="margin-top: 20px;">💰 Valores</h3>
+  <ul style="text-align: left; max-width: 600px; margin: auto;">
+    <li>• 4 mãos e 2 pés de <s>R$190</s> por <strong>R$175</strong></li>
+    <li>• 2 mãos e 2 pés de <s>R$130</s> por <strong>R$120</strong></li>
+    <li>• 4 mãos e 1 pé de <s>R$155</s> por <strong>R$140</strong></li>
+    <li>• 4 mãos de <s>R$120</s> por <strong>R$110</strong></li>
+  </ul>
+
+  <br>
+  <button class="btn" onclick="window.open('https://wa.me/5543999173125?text=Oi%2C+quero+saber+mais+sobre+o+pacote+mensal+de+unhas!', '_blank')">
+    ✨ Quero contratar o pacote
+  </button>
+</div>
+
 </html>
