--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: url('./caminho-para-logo.png') no-repeat center center;
+      background: url('./logo.png') no-repeat center center;
       background-size: contain;
       background-color: #121212;
       color: #fff;
