--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Keila Gisele Nails</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
+      background: url('logo-fundo.png') center center no-repeat fixed;
+      background-size: 60%;
+      background-color: #ffe6f0;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
       margin: 0;
       padding: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #1a1a1a;
-      background-image: url('logo-fundo.png'); /* Sua logo com opacidade baixa e fundo transparente */
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: 60%;
-      background-attachment: fixed;
-      color: #f5f5f5;
     }
 
     header {
-      background-color: rgba(255, 153, 204, 0.9);
-      padding: 30px 20px;
+      background-color: #ff99cc;
+      padding: 20px;
       color: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
 
     .logo {
@@ -30,93 +25,53 @@
       border-radius: 50%;
     }
 
-    h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      margin-top: 10px;
-    }
-
     .info {
-      margin: 40px auto;
-      font-size: 1.2rem;
-      background: rgba(255, 255, 255, 0.05);
-      padding: 20px;
-      border-radius: 16px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-      backdrop-filter: blur(12px);
+      margin: 20px;
+      font-size: 18px;
     }
 
     table {
       margin: auto;
-      background: rgba(255,255,255,0.06);
+      background-color: white;
       border-collapse: collapse;
-      width: 90%;
+      width: 80%;
       max-width: 600px;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-      backdrop-filter: blur(8px);
-      animation: fadeInUp 1s ease-out;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     th, td {
-      border: 1px solid rgba(255,255,255,0.1);
-      padding: 15px;
-      text-align: center;
+      border: 1px solid #ddd;
+      padding: 12px;
     }
 
     th {
-      background-color: rgba(255, 204, 221, 0.3);
-      color: #fff;
-    }
-
-    td {
-      color: #eee;
+      background-color: #ffccdd;
     }
 
     .buttons {
-      margin: 40px 0;
-      text-align: center;
+      margin: 30px;
     }
 
     .btn {
-      background-color: #ff6699;
+      background-color: #ff99cc;
       color: white;
       border: none;
-      padding: 15px 35px;
+      padding: 15px 30px;
       margin: 10px;
-      border-radius: 30px;
-      font-size: 1rem;
-      font-weight: 600;
+      border-radius: 10px;
+      font-size: 16px;
       cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 14px rgba(255, 102, 153, 0.4);
+      transition: background-color 0.3s;
     }
 
     .btn:hover {
-      background-color: #ff85b3;
-      transform: translateY(-2px);
+      background-color: #e673a1;
     }
 
     footer {
-      margin-top: 50px;
+      margin-top: 40px;
       font-size: 14px;
-      color: #aaa;
-      text-align: center;
-      padding: 20px;
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      color: #888;
     }
   </style>
 </head>
